# blog-server

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  askama.toml  compose.local.yaml  compose.yaml
.github/workflows/: deploy-image.yml
src/: main.rs
templates/: base.html
ui/: package.json  pnpm-lock.yaml
ui/app/: index.js  sketch.js
ui/templates/: base.html
