[package]
name = "blog-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = {version= "0.7.7", features = ["http2"]}
fs = "0.0.5"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
